add hamburger (html + scss)

--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,6 +8,7 @@
     }
     &_hidden {
         background: none;
+        box-shadow: none;
         &:hover {
             background: none;
         }
