--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,8 +1,8 @@
 .promo {
     min-height: 100vh;
     position: relative;
-    background: url('../img/main_bg_2.jpg') no-repeat 50% / cover;
-    padding-top: 390px;
+    background: url('../img/Background_example.jpg') no-repeat 50% / cover;
+    padding-top: 200px;
     &__title {
         width: 535px;
         margin-top: 10px;
