--- a/src/sass/blocks/_sidepanel.scss
+++ b/src/sass/blocks/_sidepanel.scss
@@ -1,6 +1,6 @@
 .sidepanel {
-    position: absolute;
-    top: 390px;
+    position: fixed;
+    top: 225px;
     left: 25px;
     display: grid;
     grid-template: repeat(4, minmax(20px, auto)) / 25px;
@@ -8,6 +8,12 @@
     gap: 15px;
     height: 340px;
     z-index: 3;
+    &__link {
+        width: 20px;
+        img {
+            width: 100%;
+        }
+    }
     &__divider {
         width: 2px;
         height: 70px;
@@ -17,16 +23,11 @@
     &__text {
         height: 150px;
         width: 25px;
+        font-weight: 700;
         span {
             display: block;
-            transform: rotate(-90deg) translate(-35%, -270%);
+            transform: rotate(-90deg) translate(-45%, -270%);
             width: 150px;
-        }
-    }
-    &__link {
-        width: 20px;
-        img {
-            width: 100%;
         }
     }
 }
