--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,7 @@
 
 @import 'base/variables';
 @import 'base/mixins';
+@import 'blocks/menu';
 @import 'blocks/promo';
 @import 'blocks/titles';
 @import 'blocks/buttons';
