--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -9,29 +9,106 @@
     justify-content: space-between;
     align-items: flex-end;
     cursor: pointer;
-    transform: translateY(-65%);
     span {
         display: block;
         height: 3px;
         width: 30px ;
         background: #151812;
-        transition: 0.4s all;
     }
     span.long {
         width: 36px;
     }
-    &_active {
-        span {
-            margin-bottom: 3px;
-            &:nth-child(1) {
-                transform: translateY(8px) rotate(-45deg);
+    &.active {
+        display: none;
+    }
+}
+.menu {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100vh;
+    z-index: 10;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.6s;
+    &.active {
+        left: 0;
+        visibility: visible;
+        opacity: 1;
+    }
+    &__block {
+        position: relative;
+        width: 345px;
+        height: 100%;
+        background: #FFA501;
+        padding-top: 140px;
+        padding-left: 40px;
+        transition: all 0.6s;
+        z-index: 10;
+    }
+    &__close {
+        position: absolute;
+        top: 24px;
+        right: 25px;
+        cursor: pointer;
+    }
+    &__list {
+        list-style-type: none;
+        padding-left: 35px;
+    }
+    &__item {
+        position: relative;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        margin-bottom: 15px;
+        a {
+            color: #fff;
+            text-decoration: none;
+            transition: all 0.25s;
+            &::before {
+                content: '';
+                position: absolute;
+                left: -35px;
+                top: 10px;
+                width: 15px;
+                height: 15px;
+                width: 15px;
+                height: 15px;
+                flex-shrink: 0;
+                border-radius: 100%; 
+                background-color: rgba(196, 196, 196, 0.00); 
+                border: 1px solid #000; 
+                transition: all 0.25s;
             }
-            &:nth-child(2) {
-                display: none;
-            }
-            &:nth-child(3) {
-                transform: translateY(4px) rotate(45deg);
+            &:hover {
+                color: #000;
+                &::before {
+                    background-color: #000;
+                }
             }
         }
+    }
+    &__social {
+        position: absolute;
+        bottom: 50px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 90px;
+        display: grid;
+        grid-template: 20px / repeat(3, 20px);
+        place-content: center;
+        gap: 15px;
+    }
+    &__overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        opacity: 0.75;
     }
 }
