--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 @import 'blocks/promo';
 @import 'blocks/titles';
 @import 'blocks/buttons';
+@import 'blocks/social';
 @import 'blocks/sidepanel';
 
 * {
