add about-me (html + half/scss)

--- a/src/sass/blocks/_sidepanel.scss
+++ b/src/sass/blocks/_sidepanel.scss
@@ -9,6 +9,7 @@
     height: 340px;
     z-index: 3;
     &__divider {
+        margin-top: 7px;
         width: 2px;
         height: 70px;
         background: #000;
