--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,9 +6,11 @@
 @import 'blocks/menu';
 @import 'blocks/promo';
 @import 'blocks/titles';
+@import 'blocks/grids';
 @import 'blocks/buttons';
 @import 'blocks/social';
 @import 'blocks/sidepanel';
+@import 'blocks/about-me';
 
 * {
     font-family: 'Poppins', sans-serif;
