update about-me (html + scss); add grid-elem(scss)

--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -11,3 +11,10 @@
         top: -20%;
     }
 }
+
+@mixin before_circle_grid {
+        @include before_circle;
+        &:before {
+            top: 25%;
+        }
+}
