optimise about-me (html + scss); grid-elem(scss)

--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -15,6 +15,6 @@
 @mixin before_circle_grid {
         @include before_circle;
         &:before {
-            top: 25%;
+            top: 0;
         }
 }
