--- a/src/sass/blocks/_about-me.scss
+++ b/src/sass/blocks/_about-me.scss
@@ -1,52 +1,51 @@
 .about-me {
     padding-top: 120px;
-    height: 600px;
-    display: grid;
-    grid-template: repeat(2, 300px) / 400px 570px;
-    column-gap: 70px;
-    &__item {
-        &-subtitle {
-            position: relative;
-            padding-left: 10px;
-            @include before_circle;
-        }
-        &-title {
-            margin-top: 6px;
-        }
-        &-divider {
-            width: 60px;
-            height: 3px;
-            background: $main-color;
-        }
-        &-descr {
-            margin-top: 20px;
-            color: #000;
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: normal;
+    &__wrapper {
+        // height: 600px;
+        display: grid;
+        grid-template: repeat(2, minmax(245px, auto)) / 400px 670px;
+        grid-auto-rows: minmax(245px, auto);
+        column-gap: 70px;
+        row-gap: 40px;
+    }
+    &__photo {
+        grid-column: 1;
+        grid-row: 1/3;
+        img {
+            width: 100%;
         }
     }
-}
-
-#about-me__item_first {
-    grid-column: 1;
-    grid-row: 1/3;
-}
-
-#about-me__item_second {
-    position: relative;
-    grid-column: 2;
-    grid-row: 1;
-    
-}
-
-#about-me__item_third {
-    grid-column: 2;
-    grid-row: 2;
-    height: 300px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 50px;
-    row-gap: 20px;
+    &__descr {
+        padding-top: 6px;
+        position: relative;
+        grid-column: 2;
+        grid-row: 1;
+        .divider {
+            margin-top: 4px;
+        }
+    }
+    &__title {
+        position: relative;
+        padding-left: 12px;
+        padding-bottom: 6px;
+        @include before_circle;
+    }
+    &__subtitle {
+        margin-top: 6px;
+    }
+    &__text {
+        margin-top: 20px;
+        color: #000;
+        font-size: 14px;
+        font-style: normal;
+        line-height: normal;
+    }
+    &__skills {
+        grid-column: 2;
+        grid-row: 2;
+        display: grid;
+        grid-template: repeat(2, minmax(115px, auto)) / repeat(2, 260px);
+        column-gap: 50px;
+        row-gap: 20px;
+    }
 }
