--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,3 +22,10 @@
     width: 1140px;
     margin: 0 auto;
 }
+
+.divider {
+    width: 60px;
+    height: 3px;
+    margin-top: 25px;
+    background: $main-color;
+}
