--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -7,12 +7,21 @@
     &_fs48 {
         font-size: 48px;
     }
+    &_fs20 {
+        font-size: 20px;
+        line-height: normal;
+    }
     &_fs16 {
         font-size: 16px;
         line-height: normal;
     }
     &_fs14 {
         font-size: 14px;
+        line-height: normal;
+    }
+    &_fs12 {
+        font-size: 12px;
+        font-weight: 500;
         line-height: normal;
     }
 }
