--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,6 +11,7 @@
 @import 'blocks/social';
 @import 'blocks/sidepanel';
 @import 'blocks/about-me';
+@import 'blocks/experience';
 
 * {
     font-family: 'Poppins', sans-serif;
@@ -28,4 +29,7 @@
     height: 3px;
     margin-top: 25px;
     background: $main-color;
+    &_center {
+        margin: 25px auto 0 auto;
+    }
 }
