--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,6 @@
 @import 'libs/bootstrap-reboot.min';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
 
 @import 'base/variables';
 @import 'base/mixins';
@@ -12,9 +13,11 @@
 @import 'blocks/sidepanel';
 @import 'blocks/about-me';
 @import 'blocks/experience';
+@import 'blocks/skills';
 
 * {
     font-family: 'Poppins', sans-serif;
+    // font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
 }
