--- a/src/sass/blocks/_skills.scss
+++ b/src/sass/blocks/_skills.scss
@@ -41,4 +41,48 @@
             line-height: normal;
         }
     }
+    &__info {
+        margin-top: 120px;
+        display: grid;
+        grid-template-columns: repeat(3, 350px);
+        grid-template-rows: repeat(2, minmax(70px, auto));
+        column-gap: 45px;
+        row-gap: 30px;
+    }
+    &__rate {
+        display: flex;
+        flex-direction: column;
+        div {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+        &-title {
+            position: relative;
+            padding-left: 14px;
+            @include before_circle;
+            &:before {
+                top: -7px;
+            }
+        }
+        &-percent {
+            font-size: 14px;
+            font-weight: 500;
+            line-height: normal;
+        }
+        &-line {
+            margin-top: 27px;
+            width: 350px;
+            height: 14px;
+            flex-shrink: 0;
+            border-radius: 4px;
+            background: #E8E4DE;
+            &_percent {
+                height: 14px;
+                flex-shrink: 0;
+                border-radius: 4px;
+                background: $main-color;
+            }
+        }
+    }
 }
