--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,7 @@
 @import 'blocks/experience';
 @import 'blocks/skills';
 @import 'blocks/portfolio';
+@import 'blocks/price';
 
 * {
     font-family: 'Poppins', sans-serif;
