add contacts (html + scss)

--- a/src/sass/blocks/_price.scss
+++ b/src/sass/blocks/_price.scss
@@ -38,6 +38,7 @@
             font-size: 14px;
             font-weight: 700;
             line-height: normal;
+            justify-self: end;
         }
         &-descr {
             margin-top: 5px;
