--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -79,6 +79,22 @@
             font-size: 13px;
         }
     }
+    &__triggers {
+        grid-column: 1 / 3;
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        column-gap: 35px;
+    }
+    &__policy {
+        font-size: 12px;
+        font-weight: 500;
+        line-height: normal;
+        display: flex;
+        align-items: center;
+        input {
+            margin-right: 10px;
+        }
+    }
     &__btn {
         border: none;
         font-size: 14px;
