--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -9,6 +9,8 @@
     &__photo {
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
     &__descr {
@@ -34,7 +36,6 @@
         }
         img {
             width: 30px;
-            max-width: 30px;
             max-height: 30px;
         }
     }
