--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -21,6 +21,8 @@
         filter: blur(1px) grayscale(50%);
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
         &:hover {
             filter: none;
