--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,20 +4,6 @@
 
 @import 'base/variables';
 @import 'base/mixins';
-@import 'blocks/menu';
-@import 'blocks/promo';
-@import 'blocks/titles';
-@import 'blocks/grids';
-@import 'blocks/buttons';
-@import 'blocks/social';
-@import 'blocks/sidepanel';
-@import 'blocks/about-me';
-@import 'blocks/experience';
-@import 'blocks/skills';
-@import 'blocks/portfolio';
-@import 'blocks/price';
-@import 'blocks/contacts';
-@import 'blocks/policy';
 
 * {
     font-family: 'Poppins', sans-serif;
@@ -40,3 +26,19 @@
         margin: 25px auto 0 auto;
     }
 }
+
+@import 'blocks/menu';
+@import 'blocks/promo';
+@import 'blocks/titles';
+@import 'blocks/grids';
+@import 'blocks/buttons';
+@import 'blocks/social';
+@import 'blocks/sidepanel';
+@import 'blocks/about-me';
+@import 'blocks/experience';
+@import 'blocks/skills';
+@import 'blocks/portfolio';
+@import 'blocks/price';
+@import 'blocks/contacts';
+@import 'blocks/policy';
+@import 'blocks/media';
