--- a/src/sass/blocks/_skills.scss
+++ b/src/sass/blocks/_skills.scss
@@ -64,7 +64,7 @@
         }
         &-line {
             margin-top: 27px;
-            width: 350px;
+            width: 100%;
             height: 14px;
             flex-shrink: 0;
             border-radius: 4px;
