--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -32,7 +32,7 @@
     .skills {
         padding-top: 90px;
         &__grid {
-            grid-template-columns: repeat(3, 270px);
+            grid-template-columns: repeat(auto-fit, 270px);
             justify-content: center;
             margin-top: 45px;
         }
@@ -41,6 +41,16 @@
             grid-template-columns: repeat(2,350px);
             column-gap: 0;
             justify-content: space-around;
+        }
+    }
+    .portfolio {
+        &__wrapper {
+            grid-template-columns: repeat(auto-fit, 280px);
+            justify-content: center;
+            .vertical, .horizontal {
+                    grid-row: unset;
+                    grid-column: unset;
+            }
         }
     }
 }
@@ -74,6 +84,12 @@
                 grid-template-columns: 40px 320px;
                 column-gap: 20px;
             }
+        }
+    }
+    .portfolio {
+        padding-top: 90px;
+        &__wrapper {
+            margin-top: 45px;
         }
     }
     .experience {
@@ -129,7 +145,6 @@
     .about-me {
         padding-top: 40px;
         &__wrapper {
-            // grid-template: 340px auto auto / 1fr;
             display: flex;
             flex-direction: column;
             align-items: start;
@@ -163,6 +178,19 @@
             grid-template-columns: repeat(2,250px);
             justify-content: start;
             column-gap: 30px;
+        }
+    }
+    .portfolio {
+        padding-top: 60px;
+        &__wrapper {
+            grid-template-columns: repeat(2,270px);
+            grid-template-rows: repeat(auto-fit, 270px);
+            grid-auto-rows: 270px;
+        }
+        &__item {
+            &:hover {
+                filter: blur(1px) grayscale(50%);
+            }
         }
     }
 }
@@ -234,6 +262,12 @@
             grid-template-columns: 300px;
             justify-content: center;
             row-gap: 40px;
+        }
+    }
+    .portfolio {
+        &__wrapper {
+            grid-template-columns: 280px;
+            grid-auto-rows: 280px;
         }
     }
 }
