--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -9,6 +9,7 @@
         max-width: 960px;
     }
     .about-me {
+        padding-top: 90px;
         &__wrapper {
             grid-template-columns: 400px 520px;
             gap: 35px;
@@ -44,6 +45,7 @@
         }
     }
     .portfolio {
+        padding-top: 90px;
         &__wrapper {
             grid-template-columns: repeat(auto-fit, 280px);
             justify-content: center;
@@ -105,6 +107,13 @@
         }
         &__info {
             grid-template-columns: repeat(2,320px);
+        }
+    }
+    .price {
+        &__wrapper {
+            padding: 40px 0 0 10px;
+            grid-template-columns: repeat(auto-fit, 335px);
+            row-gap: 20px;
         }
     }
 }
@@ -193,6 +202,12 @@
             }
         }
     }
+    .price {
+        &__wrapper {
+            padding: 20px 0px 0 20px;
+            justify-content: center;
+        }
+    }
 }
 
 @media(max-width: 576px) {
@@ -268,6 +283,11 @@
         &__wrapper {
             grid-template-columns: 280px;
             grid-auto-rows: 280px;
+        }
+    }
+    .price {
+        &__wrapper {
+            grid-template-columns: repeat(auto-fit, 275px);
         }
     }
 }
