--- a/src/sass/blocks/_price.scss
+++ b/src/sass/blocks/_price.scss
@@ -3,31 +3,26 @@
     &__wrapper {
         padding: 60px 50px 0 75px;
         position: relative;
-        ul {
-            display: grid;
-            grid-template: repeat(3, minmax(44px, auto)) / repeat(2, 370px);
-            grid-auto-rows: minmax(44px, auto);
-            row-gap: 15px;
-            justify-content: space-between;
-            list-style-type: none;
-            li {
-                position: relative;
-                @include circle_15px;
-                &:before {
-                    left: -25px;
-                    top: 4px;
-                }
-            }
-        }
+        display: grid;
+        grid-template: repeat(3, auto) / repeat(2, 370px);
+        grid-auto-rows: minmax(auto);
+        row-gap: 15px;
+        justify-content: space-between;
     }
     &__item {
+        position: relative;
         display: grid;
-        grid-template: minmax(21px, auto) 14px / minmax(auto, 186px) minmax(auto, 121px);
+        grid-template: repeat(2, minmax(21px, auto)) / repeat(2, auto);
         justify-content: space-between;
         align-content: space-between;
         .long-row {
             grid-row: 2;
             grid-column: 1 / 3;
+        }
+        @include circle_15px;
+        &:before {
+            left: -25px;
+            top: 3px;
         }
         &-title {
             font-size: 14px;
