--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -7,6 +7,9 @@
     &_fs48 {
         font-size: 48px;
     }
+    &_fs36 {
+        font-size: 36px;
+    }
     &_fs20 {
         font-size: 20px;
         line-height: normal;
