--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -371,4 +371,11 @@
             margin-top: 20px;
         }
     }
+    .policy {
+        padding: 30px 0px 10px 15px;
+        width: 100%;
+        &__title {
+            font-size: 24px;
+        }
+    }
 }
